[gd_scene load_steps=4 format=2]

[ext_resource path="res://Attacks/Phase2/BestAttack/KnivesAttack/knives_attack.gd" type="Script" id=1]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 1.01141, -21.9417, -1.01141, 21.9417, 470, 180, 40.3652, -35.6799, -40.3652, 35.6799, 430, 270, 0, 0, 0, 0, 358.218, 300.331 )
}

[sub_resource type="Curve2D" id=2]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 350, 170, -63.2594, -37.3999, 63.2594, 37.3999, 420, 310, 0, 0, 0, 0, 520, 340 )
}

[node name="KnivesAttack" type="Node2D"]
script = ExtResource( 1 )

[node name="KnifePrePath" type="Line2D" parent="."]
width = 1.0
default_color = Color( 0.219608, 1, 0, 1 )

[node name="Path2D" type="Path2D" parent="KnifePrePath"]
position = Vector2( -194.785, -84.5058 )
scale = Vector2( 1.52082, 1.41346 )
curve = SubResource( 1 )

[node name="PathFollow2D" type="PathFollow2D" parent="KnifePrePath/Path2D"]
position = Vector2( 470, 180 )
rotation = 1.61092

[node name="KnifeSpawn" type="Node2D" parent="KnifePrePath"]
position = Vector2( 340, 170 )

[node name="KnifePrePath2" type="Line2D" parent="."]
width = 1.0
default_color = Color( 0.219608, 1, 0, 1 )

[node name="Path2D" type="Path2D" parent="KnifePrePath2"]
curve = SubResource( 2 )

[node name="PathFollow2D" type="PathFollow2D" parent="KnifePrePath2/Path2D"]
position = Vector2( 350, 170 )
rotation = 1.4795

[node name="KnifeSpawn" type="Node2D" parent="KnifePrePath2"]
position = Vector2( 530, 170 )
